<resources>
    <string name="app_name">helpla</string>
    <string name="username_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="register"><u>Not a user yet ? sign up!</u></string>
    <string name="remember_me">Remember Me</string>
    <string name="name_hint">Name</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="registration">Register</string>


</resources>
